--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -3,8 +3,8 @@ image: gitpod/workspace-full-vnc
 tasks:
 - name: SETUP - UPDATE AND INSTALL
   init: |
-    sudo apt-get update
-    sudo apt install inkscape
+    sudo apt-get update -y
+    sudo apt install inkscape -y
     gp sync-done bundle
 
 - name: SETUP - DOWNLOAD GRAPHS
